10-deployment-with-ingress-and-tls/web-application/deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-application
  labels:
    app: web-application
    workshop: workshop
spec:
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: web-application
  template:
    metadata:
      labels:
        app: web-application
        workshop: workshop
    spec:
      containers:
        - name: web-application
          image: bashofmann/k8s-workshop-web-application:1.9.9
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: http
            timeoutSeconds: 1
