10-deployment-with-ingress-and-tls/web-application/deployment/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: web-application
  labels:
    app: web-application
    workshop: workshop
spec:
  tls:
    - hosts:
        - web-application-<YOURNAME>.plgrnd.be
  rules:
    - host: web-application-<YOURNAME>.plgrnd.be
      http:
        paths:
          - path: /
            backend:
              serviceName: web-application
              servicePort: 80
